--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.9.5",
-    "axios": "^1.5.0",
-    "dotenv": "^16.3.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "next": "latest",
-    "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "8.1.0"
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "20.5.9",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "postcss": "8.4.29",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@types/redux-logger": "3.0.9",
-    "redux-logger": "3.0.6",
-    "typescript": "5.1.3"
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
   }
 }
-
