--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
