--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -18,8 +18,6 @@ spring.rabbitmq.host=137.184.216.126
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=FYP
 spring.rabbitmq.password=FYP
-
-
 spring.rabbitmq.SentimentAnalysisQueueName=SentimentAnalysisQueue
 spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultQueue
 spring.rabbitmq.exchangeName=FYP_exchange
@@ -27,6 +25,15 @@ spring.rabbitmq.SentimentAnalysisRoutingKey=FYP_SentimentAnalysis
 
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+do.space.key=DO00VRF3YP4DQX8G2B7A
+do.space.secret=+GYNag4/v0SMbxa/nXxXTWyEB/9v/uClvGDHBiMz2uk
+do.space.endpoint=sgp1.digitaloceanspaces.com
+do.space.region=sgp1
+do.space.bucket=fyp
+
+spring.servlet.multipart.max-file-size = 15MB
+spring.servlet.multipart.max-request-size = 50MB
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
