--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
