--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
+    "@mui/joy": "^5.0.0-beta.8",
     "@mui/material": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.9",
