--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.5.9",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
@@ -25,6 +26,7 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
