feat: implement basic search page

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-GAMES_STORAGE_PATH_PREFIX=https://fyp.sgp1.digitaloceanspaces.com/
+NEXT_PUBLIC_GAMES_STORAGE_PATH_PREFIX=https://fyp.sgp1.digitaloceanspaces.com/
+NEXT_PUBLIC_GAMES_STORAGE_HOSTNAME=fyp.sgp1.digitaloceanspaces.com
+NEXT_PUBLIC_GAMES_STORAGE_PATHNAME=/games/**
