[Backend] Lazy fetch

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-logging.level.org.hibernate.stat=DEBUG
+#logging.level.org.hibernate.stat=DEBUG
 spring.jpa.properties.hibernate.generate_statistics=true
 
 management.datadog.metrics.export.enabled=false
