--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -116,6 +116,10 @@
 			<scope>test</scope>
 			<version>3.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
