--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,12 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "cookies-next": "^4.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7"
   }
