--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -123,6 +123,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>critiQ-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
