--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^8.5.1",
     "next": "13.4.19",
+    "notistack": "^3.0.1",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
