[Backend] self sign cert

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8080
 
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/critiq.p12
+server.ssl.key-store-password=CritiQPlatform2023
+server.ssl.enabled=true
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 spring.jpa.properties.hibernate.order_inserts=true
