--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
 
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore/critiq.p12
+server.ssl.key-store=classpath:keystore/keystore.p12
 server.ssl.key-store-password=CritiQPlatform2023
+server.ssl.key-alias=tomcat
 server.ssl.enabled=true
 
 
