--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=8080
+server.port=8443
 
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore/keystore.p12
+server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=CritiQPlatform2023
-server.ssl.key-alias=tomcat
 server.ssl.enabled=true
+server.ssl.key-alias=tomcat
 
 
 spring.jpa.hibernate.ddl-auto=update
