--- a/Frontend/.env.production
+++ b/Frontend/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_PATH_PREFIX=https://109.123.232.92:9000/
+NEXT_PUBLIC_BACKEND_PATH_PREFIX=https://critiqbackend.itzjacky.info:9000/
