[B,F] fix url and typo

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 #spring.datasource.username=FYP
 #spring.datasource.password=FYP
 
-application.web.url=http://localhost:3000
+application.web.url=https://critiq.itzjacky.info
 
 SENTIMENT_ANALYSIS_SCRIPT_PATH=/Users/jacky/Desktop/FYP/NLP/sentiment_anal_12-09-2023.py
 
