feat: add CORS to API calls

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -67,3 +67,4 @@ spring.jpa.properties.hibernate.generate_statistics=true
 management.datadog.metrics.export.enabled=false
 
 server.error.include-message=always
+server.ssl.enabled=false
