[Backend] age and last active

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.ssl.key-store-password=CritiQPlatform2023
 server.ssl.enabled=true
 server.ssl.key-alias=tomcat
 
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC+8
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=50
