--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "notistack": "^3.0.1",
     "postcss": "8.4.29",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7"
   }
