--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -136,6 +136,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.maxmind.geoip2</groupId>
+			<artifactId>geoip2</artifactId>
+			<version>2.14.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
