[NLP] Clean Nov chatgpt 3-class data
clean nov chatgpt 3.5 3-class sentiment classification data

add the cleaned data and joined labelled data

--- a/NLP/sa_hkuchatgpt/.gitignore
+++ b/NLP/sa_hkuchatgpt/.gitignore
@@ -5,3 +5,4 @@ secret.json
 
 dataset_cleaned_heartless_sampled_20230927/data*/
 dataset_cleaned_heartless_sampled_20231028/data*/
+dataset_cleaned_heartless_sampled_20231129/data*/
