--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "notistack": "^3.0.1",
     "postcss": "8.4.29",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
@@ -45,6 +46,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.21",
+    "@types/react-avatar-editor": "^13.0.2",
     "@types/react-dom": "^18.2.7"
   }
 }
