--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -141,6 +141,11 @@
 			<artifactId>geoip2</artifactId>
 			<version>2.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
 	</dependencies>
 
 	<build>
