--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,8 +36,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
+    "react-slick": "^0.29.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "usehooks-ts": "^2.9.1"
@@ -47,6 +49,7 @@
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.21",
     "@types/react-avatar-editor": "^13.0.2",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.13"
   }
 }
