--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mui-file-input": "^4.0.3",
     "next": "13.4.19",
     "notistack": "^3.0.1",
     "postcss": "8.4.29",
