fix: disable hibernate sql log in prod

--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -3,3 +3,6 @@ application.web.url=http://localhost:3000
 server.ssl.enabled=false
 
 spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultTestQueue
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
