--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -64,11 +64,11 @@ spring.servlet.multipart.max-file-size = 15MB
 spring.servlet.multipart.max-request-size = 50MB
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #logging.level.org.hibernate.stat=DEBUG
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 
 management.datadog.metrics.export.enabled=false
 
