--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -5,4 +5,4 @@ server.ssl.enabled=false
 spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultTestQueue
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=DEBUG
