--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "cookies-next": "^4.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0-rc17",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^8.5.1",
