--- a/NLP/sa_hkuchatgpt/.gitignore
+++ b/NLP/sa_hkuchatgpt/.gitignore
@@ -2,5 +2,6 @@ secret.json
 
 *.pyc
 
-
 dataset_cleaned_heartless_sampled_20230927/data*/
+dataset_cleaned_heartless_sampled_20231028/data*/
+dataset_cleaned_heartless_sampled_20231129/data*/
