--- a/NLP/.gitattributes
+++ b/NLP/.gitattributes
@@ -1,1 +1,2 @@
 steam-games-reviews-analysis-sentiment-analysis_model_12-09-2023.sav filter=lfs diff=lfs merge=lfs -text
+sa/bert-finetune_240k_bal/** filter=lfs diff=lfs merge=lfs -text
