--- a/NLP/dev-workspace/sa/bert_2023-12-13/.gitignore
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/.gitignore
@@ -2,3 +2,5 @@ test_trainer_24-11-2023_v5/
 test_trainer_2023-12-16_120k_imbal_v1/
 test_trainer_save_model_2023-12-16_v1/
 bert-finetune_*/
+
+tokenizer_bert-base-cased/
