--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -6,3 +6,5 @@ spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultTestQueu
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.stat=DEBUG
+
+spring.datasource.hikari.maximum-pool-size=20
