feat: gameAnalytic api

--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -7,4 +7,5 @@ spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.stat=DEBUG
 
+# increase max pool size for hikari to test prod performance
 spring.datasource.hikari.maximum-pool-size=50
