--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "mui-file-input": "^4.0.3",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "notistack": "^3.0.1",
     "postcss": "8.4.29",
     "react": "^18.2.0",
