feat: add TM Queues

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -48,8 +48,11 @@ spring.rabbitmq.username=FYP
 spring.rabbitmq.password=FYP
 spring.rabbitmq.SentimentAnalysisQueueName=SentimentAnalysisQueue
 spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultQueue
+spring.rabbitmq.TopicModelingQueueName=TopicModelingQueue
+spring.rabbitmq.TopicModelingResultQueueName=TopicModelingResultQueue
 spring.rabbitmq.exchangeName=FYP_exchange
 spring.rabbitmq.SentimentAnalysisRoutingKey=FYP_SentimentAnalysis
+spring.rabbitmq.TopicModelingRoutingKey=FYP_TopicModeling
 
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
