fix: migrate to new DB

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -39,8 +39,8 @@ application.security.jwt.refreshToken.expiration=604800000
 #1 day and 7 days
 
 spring.datasource.username=doadmin
-spring.datasource.password=AVNS_9nLAmoy4-hcpd8ZWsGy
-spring.datasource.url=jdbc:mysql://db-mysql-sgp1-51183-do-user-14629891-0.b.db.ondigitalocean.com:25060/FYP?useSSL=false&allowPublicKeyRetrieval=True
+spring.datasource.password=AVNS_OVeiQl_Hzg7aNxxTaib
+spring.datasource.url=jdbc:mysql://db-mysql-sgp1-36714-do-user-14629960-0.c.db.ondigitalocean.com:25060/FYP?useSSL=false&allowPublicKeyRetrieval=True
 
 spring.rabbitmq.host=137.184.216.126
 spring.rabbitmq.port=5672
