feat: Game Statistics Info

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,9 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/joy": "^5.0.0-beta.8",
     "@mui/material": "^5.14.11",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/core": "^0.85.1",
+    "@nivo/pie": "^0.85.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.9",
     "@vercel/analytics": "^1.1.1",
