fix: dockerfile build issue and filename
Folder abt Monster Hunter World Iceborne is renamed for window system

update conda env to add langchain and chromadb to the env

update docker build to add llm files properly

--- a/NLP/tm/Dockerfile
+++ b/NLP/tm/Dockerfile
@@ -9,6 +9,7 @@ SHELL ["/bin/bash", "-i", "-c"]
 # Copy all files under this directory to the container with the path as in github
 # contining the models, conda env information, python script to run inference
 COPY . /NLP/tm/
+COPY --from=llm_path . /NLP/llm_rag/
 
 # packages related files (pre-downloaded large files)
 # COPY /docker_setup_files/ /NLP/docker_setup_files/
