--- a/NLP/tm/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/tm/docker_setup_files/docker_conda_env_list.yml
@@ -103,23 +103,105 @@ dependencies:
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
   - pip:
+      - aiohttp==3.9.3
+      - aiosignal==1.3.1
+      - annotated-types==0.6.0
+      - anyio==4.3.0
+      - asgiref==3.7.2
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - backoff==2.2.1
+      - bcrypt==4.1.2
       - bertopic==0.16.0
+      - build==1.1.1
+      - cachetools==5.3.3
+      - chroma-hnswlib==0.7.3
+      - chromadb==0.4.22
+      - coloredlogs==15.0.1
       - cython==0.29.37
+      - dataclasses-json==0.6.4
+      - deprecated==1.2.14
+      - exceptiongroup==1.2.0
+      - fastapi==0.110.0
+      - flatbuffers==24.3.7
+      - frozenlist==1.4.1
+      - google-auth==2.28.2
+      - googleapis-common-protos==1.63.0
+      - greenlet==3.0.3
+      - grpcio==1.62.1
+      - h11==0.14.0
+      - httptools==0.6.1
       - huggingface-hub==0.17.3
+      - humanfriendly==10.0
+      - importlib-metadata==6.11.0
+      - importlib-resources==6.3.0
+      - jsonpatch==1.33
+      - jsonpointer==2.4
+      - kubernetes==29.0.0
+      - langchain==0.1.12
+      - langchain-community==0.0.28
+      - langchain-core==0.1.32
+      - langchain-text-splitters==0.0.1
+      - langsmith==0.1.27
       - llvmlite==0.42.0
+      - marshmallow==3.21.1
+      - mmh3==4.1.0
+      - monotonic==1.6
+      - multidict==6.0.5
+      - mypy-extensions==1.0.0
       - numba==0.59.0
+      - oauthlib==3.2.2
+      - onnxruntime==1.17.1
+      - opentelemetry-api==1.23.0
+      - opentelemetry-exporter-otlp-proto-common==1.23.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.23.0
+      - opentelemetry-instrumentation==0.44b0
+      - opentelemetry-instrumentation-asgi==0.44b0
+      - opentelemetry-instrumentation-fastapi==0.44b0
+      - opentelemetry-proto==1.23.0
+      - opentelemetry-sdk==1.23.0
+      - opentelemetry-semantic-conventions==0.44b0
+      - opentelemetry-util-http==0.44b0
+      - orjson==3.9.15
+      - overrides==7.7.0
       - packaging==23.2
       - pika==1.3.1
       - plotly==5.18.0
+      - posthog==3.5.0
+      - protobuf==4.25.3
+      - pulsar-client==3.4.0
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pydantic==2.6.4
+      - pydantic-core==2.16.3
       - pynndescent==0.5.11
+      - pypika==0.48.9
+      - pyproject-hooks==1.0.0
+      - python-dotenv==1.0.1
       - pyyaml==6.0.1
+      - requests-oauthlib==1.4.0
+      - rsa==4.9
       - safetensors==0.4.2
       - scikit-learn==1.3.0
       - scipy==1.11.4
       - sentence-transformers==2.2.2
       - sentencepiece==0.1.99
+      - sniffio==1.3.1
+      - sqlalchemy==2.0.28
+      - starlette==0.36.3
       - tenacity==8.2.3
       - tokenizers==0.14.1
+      - tomli==2.0.1
       - transformers==4.35.0
+      - typer==0.9.0
+      - typing-inspect==0.9.0
       - umap-learn==0.5.5
+      - uvicorn==0.28.0
+      - uvloop==0.19.0
+      - watchfiles==0.21.0
+      - websocket-client==1.7.0
+      - websockets==12.0
+      - wrapt==1.16.0
+      - yarl==1.9.4
+      - zipp==3.18.1
 prefix: /root/miniforge3/envs/fyp-nlp-tm-production
