--- a/NLP/tm/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/tm/docker_setup_files/docker_conda_env_list.yml
@@ -190,6 +190,7 @@ dependencies:
       - sqlalchemy==2.0.28
       - starlette==0.36.3
       - tenacity==8.2.3
+      - tiktoken==0.6.0
       - tokenizers==0.14.1
       - tomli==2.0.1
       - transformers==4.35.0
