--- a/NLP/.gitattributes
+++ b/NLP/.gitattributes
@@ -1,4 +1,4 @@
 steam-games-reviews-analysis-sentiment-analysis_model_12-09-2023.sav filter=lfs diff=lfs merge=lfs -text
 sa/bert-finetune_240k_bal/** filter=lfs diff=lfs merge=lfs -text
-
 * text=auto
+llm_rag/Mixtral-8x7B-Instruct-v0.1_tokenizer/** filter=lfs diff=lfs merge=lfs -text
