--- a/NLP/tm/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/tm/docker_setup_files/docker_conda_env_list.yml
@@ -130,8 +130,10 @@ dependencies:
       - greenlet==3.0.3
       - grpcio==1.62.1
       - h11==0.14.0
+      - httpcore==1.0.4
       - httptools==0.6.1
-      - huggingface-hub==0.17.3
+      - httpx==0.25.2
+      - huggingface-hub==0.21.4
       - humanfriendly==10.0
       - importlib-metadata==6.11.0
       - importlib-resources==6.3.0
@@ -141,10 +143,12 @@ dependencies:
       - langchain==0.1.12
       - langchain-community==0.0.28
       - langchain-core==0.1.32
+      - langchain-mistralai==0.0.5
       - langchain-text-splitters==0.0.1
       - langsmith==0.1.27
       - llvmlite==0.42.0
       - marshmallow==3.21.1
+      - mistralai==0.1.6
       - mmh3==4.1.0
       - monotonic==1.6
       - multidict==6.0.5
@@ -170,6 +174,7 @@ dependencies:
       - posthog==3.5.0
       - protobuf==4.25.3
       - pulsar-client==3.4.0
+      - pyarrow==15.0.2
       - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
       - pydantic==2.6.4
@@ -191,9 +196,9 @@ dependencies:
       - starlette==0.36.3
       - tenacity==8.2.3
       - tiktoken==0.6.0
-      - tokenizers==0.14.1
+      - tokenizers==0.15.2
       - tomli==2.0.1
-      - transformers==4.35.0
+      - transformers==4.37.1
       - typer==0.9.0
       - typing-inspect==0.9.0
       - umap-learn==0.5.5
