feat: Aggregated Review

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -45,6 +45,7 @@ spring.rabbitmq.SentimentAnalysisQueueName=SentimentAnalysisQueue
 spring.rabbitmq.SentimentAnalysisResultQueueName=SentimentAnalysisResultQueue
 spring.rabbitmq.TopicModelingQueueName=TopicModelingQueue
 spring.rabbitmq.TopicModelingResultQueueName=TopicModelingResultQueue
+spring.rabbitmq.AggregatedReviewResultQueueName=GameAggregationResultQueue
 spring.rabbitmq.exchangeName=FYP_exchange
 spring.rabbitmq.SentimentAnalysisRoutingKey=FYP_SentimentAnalysis
 spring.rabbitmq.TopicModelingRoutingKey=FYP_TopicModeling
