--- a/NLP/llm_rag/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/llm_rag/docker_setup_files/docker_conda_env_list.yml
@@ -1,6 +1,5 @@
-name: fyp-nlp-tm-production
+name: fyp-nlp-llmrag-production
 channels:
-  - anaconda
   - pytorch
   - conda-forge
 dependencies:
@@ -11,17 +10,14 @@ dependencies:
   - ca-certificates=2024.2.2=hbcca054_0
   - certifi=2024.2.2=pyhd8ed1ab_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - click=8.1.7=unix_pyh707e725_0
-  - colorama=0.4.6=pyhd8ed1ab_0
   - cpuonly=2.0=0
   - ffmpeg=4.3=hf484d3e_0
-  - filelock=3.13.1=pyhd8ed1ab_0
+  - filelock=3.13.3=pyhd8ed1ab_0
   - freetype=2.12.1=h267a509_2
-  - fsspec=2024.2.0=pyhca7485f_0
-  - gmp=6.3.0=h59595ed_0
+  - fsspec=2024.3.1=pyhca7485f_0
+  - gmp=6.3.0=h59595ed_1
   - gmpy2=2.1.2=py39h376b7d2_1
   - gnutls=3.6.13=h85f3911_1
-  - hdbscan=0.8.33=py39h44dd56e_4
   - idna=3.6=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - joblib=1.3.2=pyhd8ed1ab_0
@@ -31,8 +27,8 @@ dependencies:
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
   - libabseil=20230802.1=cxx17_h59595ed_0
-  - libblas=3.9.0=21_linux64_openblas
-  - libcblas=3.9.0=21_linux64_openblas
+  - libblas=3.9.0=20_linux64_openblas
+  - libcblas=3.9.0=20_linux64_openblas
   - libdeflate=1.17=h0b41bf4_0
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=13.2.0=h807b86a_5
@@ -41,17 +37,17 @@ dependencies:
   - libgomp=13.2.0=h807b86a_5
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=2.0.0=h9bf148f_0
-  - liblapack=3.9.0=21_linux64_openblas
+  - liblapack=3.9.0=20_linux64_openblas
   - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.26=pthreads_h413a1c8_0
-  - libpng=1.6.42=h2797004_0
+  - libopenblas=0.3.25=pthreads_h413a1c8_0
+  - libpng=1.6.43=h2797004_0
   - libprotobuf=4.24.4=hf27288f_0
-  - libsqlite=3.44.2=h2797004_0
-  - libstdcxx-ng=13.2.0
+  - libsqlite=3.45.2=h2797004_0
+  - libstdcxx-ng=13.2.0=h7e041cc_5
   - libtiff=4.5.0=h6adf6a1_2
   - libtorch=2.1.0=cpu_generic_h7795521_3
   - libuuid=2.38.1=h0b41bf4_0
-  - libuv=1.47.0=hd590300_0
+  - libuv=1.48.0=hd590300_0
   - libwebp-base=1.3.2=hd590300_0
   - libxcb=1.13=h7f98852_1004
   - libxcrypt=4.4.36=hd590300_1
@@ -60,43 +56,42 @@ dependencies:
   - mpc=1.3.1=hfe3b2da_0
   - mpfr=4.2.1=h9458935_0
   - mpmath=1.3.0=pyhd8ed1ab_0
-  - ncurses=6.4=h59595ed_2
+  - ncurses=6.4.20240210=h59595ed_0
   - nettle=3.6=he412f7d_0
   - networkx=3.2.1=pyhd8ed1ab_0
-  - nltk=3.8.1=py39h06a4308_0
   - nomkl=1.0=h5ca1d4c_0
   - numpy=1.26.4=py39h474f0d3_0
   - openh264=2.1.1=h780b84a_0
   - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.2.1=hd590300_0
+  - openssl=3.2.1=hd590300_1
   - pandas=2.1.0=py39hddac248_0
   - pillow=9.4.0=py39h2320bf1_1
   - pip=24.0=pyhd8ed1ab_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.9.18=h0755675_1_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-tzdata=2023.4=pyhd8ed1ab_0
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
   - python_abi=3.9=4_cp39
   - pytorch=2.1.0=cpu_generic_py39h163b580_3
   - pytorch-mutex=1.0=cpu
   - pytz=2024.1=pyhd8ed1ab_0
   - readline=8.2=h8228510_1
-  - regex=2023.12.25=py39hd1e30aa_0
   - requests=2.31.0=pyhd8ed1ab_0
-  - setuptools=69.0.3=pyhd8ed1ab_0
+  - scikit-learn=1.3.0=py39hc236052_0
+  - scipy=1.11.4=py39h474f0d3_0
+  - setuptools=69.2.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.5.1=h9b69904_2
   - sympy=1.12=pypyh9d50eac_103
-  - threadpoolctl=3.2.0=pyha21a80b_0
+  - threadpoolctl=3.4.0=pyhc1e730c_0
   - tk=8.6.13=noxft_h4845f30_101
   - torchaudio=2.1.0=py39_cpu
   - torchvision=0.16.0=py39_cpu
-  - tqdm=4.66.1=pyhd8ed1ab_0
-  - typing_extensions=4.9.0=pyha770c72_0
+  - typing_extensions=4.10.0=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
-  - urllib3=2.2.0=pyhd8ed1ab_0
-  - wheel=0.42.0=pyhd8ed1ab_0
+  - urllib3=2.2.1=pyhd8ed1ab_0
+  - wheel=0.43.0=pyhd8ed1ab_1
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.6=h166bdaf_0
@@ -107,102 +102,99 @@ dependencies:
       - aiosignal==1.3.1
       - annotated-types==0.6.0
       - anyio==4.3.0
-      - asgiref==3.7.2
+      - asgiref==3.8.1
       - async-timeout==4.0.3
       - attrs==23.2.0
       - backoff==2.2.1
       - bcrypt==4.1.2
-      - bertopic==0.16.0
-      - build==1.1.1
+      - build==1.2.1
       - cachetools==5.3.3
       - chroma-hnswlib==0.7.3
-      - chromadb==0.4.22
+      - chromadb==0.4.24
       - coloredlogs==15.0.1
-      - cython==0.29.37
       - dataclasses-json==0.6.4
       - deprecated==1.2.14
       - exceptiongroup==1.2.0
       - fastapi==0.110.0
-      - flatbuffers==24.3.7
+      - flatbuffers==24.3.25
       - frozenlist==1.4.1
-      - google-auth==2.28.2
+      - google-auth==2.29.0
       - googleapis-common-protos==1.63.0
       - greenlet==3.0.3
       - grpcio==1.62.1
       - h11==0.14.0
-      - httpcore==1.0.4
+      - httpcore==1.0.5
       - httptools==0.6.1
       - httpx==0.25.2
-      - huggingface-hub==0.21.4
+      - httpx-sse==0.4.0
+      - huggingface-hub==0.22.2
       - humanfriendly==10.0
-      - importlib-metadata==6.11.0
-      - importlib-resources==6.3.0
+      - importlib-metadata==7.0.0
+      - importlib-resources==6.4.0
       - jsonpatch==1.33
       - jsonpointer==2.4
       - kubernetes==29.0.0
       - langchain==0.1.12
-      - langchain-community==0.0.28
-      - langchain-core==0.1.32
-      - langchain-mistralai==0.0.5
+      - langchain-community==0.0.29
+      - langchain-core==0.1.36
+      - langchain-mistralai==0.1.0
       - langchain-text-splitters==0.0.1
-      - langsmith==0.1.27
-      - llvmlite==0.42.0
+      - langsmith==0.1.38
+      - markdown-it-py==3.0.0
       - marshmallow==3.21.1
-      - mistralai==0.1.6
+      - mdurl==0.1.2
+      - mistralai==0.1.8
       - mmh3==4.1.0
       - monotonic==1.6
       - multidict==6.0.5
       - mypy-extensions==1.0.0
-      - numba==0.59.0
       - oauthlib==3.2.2
       - onnxruntime==1.17.1
-      - opentelemetry-api==1.23.0
-      - opentelemetry-exporter-otlp-proto-common==1.23.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.23.0
-      - opentelemetry-instrumentation==0.44b0
-      - opentelemetry-instrumentation-asgi==0.44b0
-      - opentelemetry-instrumentation-fastapi==0.44b0
-      - opentelemetry-proto==1.23.0
-      - opentelemetry-sdk==1.23.0
-      - opentelemetry-semantic-conventions==0.44b0
-      - opentelemetry-util-http==0.44b0
-      - orjson==3.9.15
+      - opentelemetry-api==1.24.0
+      - opentelemetry-exporter-otlp-proto-common==1.24.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.24.0
+      - opentelemetry-instrumentation==0.45b0
+      - opentelemetry-instrumentation-asgi==0.45b0
+      - opentelemetry-instrumentation-fastapi==0.45b0
+      - opentelemetry-proto==1.24.0
+      - opentelemetry-sdk==1.24.0
+      - opentelemetry-semantic-conventions==0.45b0
+      - opentelemetry-util-http==0.45b0
+      - orjson==3.10.0
       - overrides==7.7.0
       - packaging==23.2
       - pika==1.3.1
-      - plotly==5.18.0
       - posthog==3.5.0
       - protobuf==4.25.3
       - pulsar-client==3.4.0
-      - pyarrow==15.0.2
-      - pyasn1==0.5.1
-      - pyasn1-modules==0.3.0
+      - pyasn1==0.6.0
+      - pyasn1-modules==0.4.0
       - pydantic==2.6.4
       - pydantic-core==2.16.3
-      - pynndescent==0.5.11
+      - pygments==2.17.2
       - pypika==0.48.9
       - pyproject-hooks==1.0.0
       - python-dotenv==1.0.1
       - pyyaml==6.0.1
-      - requests-oauthlib==1.4.0
+      - requests-oauthlib==2.0.0
+      - rich==13.7.1
       - rsa==4.9
       - safetensors==0.4.2
-      - scikit-learn==1.3.0
-      - scipy==1.11.4
       - sentence-transformers==2.2.2
-      - sentencepiece==0.1.99
+      - sentencepiece==0.2.0
+      - shellingham==1.5.4
       - sniffio==1.3.1
-      - sqlalchemy==2.0.28
+      - sqlalchemy==2.0.29
       - starlette==0.36.3
       - tenacity==8.2.3
-      - tiktoken==0.6.0
       - tokenizers==0.15.2
       - tomli==2.0.1
       - transformers==4.37.1
-      - typer==0.9.0
+      - typer==0.12.0
+      - typer-cli==0.12.0
+      - typer-slim==0.12.0
       - typing-inspect==0.9.0
-      - umap-learn==0.5.5
-      - uvicorn==0.28.0
+      - uvicorn==0.29.0
       - uvloop==0.19.0
       - watchfiles==0.21.0
       - websocket-client==1.7.0
@@ -210,4 +202,4 @@ dependencies:
       - wrapt==1.16.0
       - yarl==1.9.4
       - zipp==3.18.1
-prefix: /root/miniforge3/envs/fyp-nlp-tm-production
+prefix: /root/miniforge3/envs/fyp-nlp-llmrag-production
