--- a/NLP/llm_rag/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/llm_rag/docker_setup_files/docker_conda_env_list.yml
@@ -186,6 +186,7 @@ dependencies:
       - sniffio==1.3.1
       - sqlalchemy==2.0.29
       - starlette==0.36.3
+      - tabulate==0.9.0
       - tenacity==8.2.3
       - tokenizers==0.15.2
       - tomli==2.0.1
