--- a/NLP/tm/docker_setup_files/docker_conda_env_list.yml
+++ b/NLP/tm/docker_setup_files/docker_conda_env_list.yml
@@ -133,6 +133,7 @@ dependencies:
       - httpcore==1.0.4
       - httptools==0.6.1
       - httpx==0.25.2
+      - httpx-sse==0.4.0
       - huggingface-hub==0.21.4
       - humanfriendly==10.0
       - importlib-metadata==6.11.0
@@ -143,12 +144,12 @@ dependencies:
       - langchain==0.1.12
       - langchain-community==0.0.28
       - langchain-core==0.1.32
-      - langchain-mistralai==0.0.5
+      - langchain-mistralai==0.1.0
       - langchain-text-splitters==0.0.1
       - langsmith==0.1.27
       - llvmlite==0.42.0
       - marshmallow==3.21.1
-      - mistralai==0.1.6
+      - mistralai==0.1.8
       - mmh3==4.1.0
       - monotonic==1.6
       - multidict==6.0.5
@@ -194,6 +195,7 @@ dependencies:
       - sniffio==1.3.1
       - sqlalchemy==2.0.28
       - starlette==0.36.3
+      - tabulate==0.9.0
       - tenacity==8.2.3
       - tiktoken==0.6.0
       - tokenizers==0.15.2
