--- a/Frontend/.env.development
+++ b/Frontend/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BACKEND_PATH_PREFIX=http://localhost:8080/
+# NEXT_PUBLIC_BACKEND_PATH_PREFIX=http://localhost:8080/
+NEXT_PUBLIC_BACKEND_PATH_PREFIX=https://critiqbackend.itzjacky.info:9000/
